<resources>
    <string name="app_name">Chatroom</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">نام کاربری</string>
    <string name="password">پسوورد</string>
    <string name="login">ورود</string>
    <string name="not_user">حساب کاربری ندارید؟</string>
    <string name="welcome">خوش آمدید</string>
    <string name="sign_up">ثبت نام</string>
    <string name="email">ایمیل</string>
    <string name="enter_username">لطفا نام کاربری را وارد کتید</string>
    <string name="enter_password">لطفا پسوورد را وارد کتید</string>
    <string name="rooms">Rooms :</string>
</resources>